// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WindowedComboBox - Snapshot Tests > renders all items without scrollbar when they fit 1`] = `
"
❯ Item 1
  Item 2
  Item 3
"
`;

exports[`WindowedComboBox - Snapshot Tests > renders empty state 1`] = `
"Search: Type to search...

No matches found"
`;

exports[`WindowedComboBox - Snapshot Tests > renders grouped items with headers 1`] = `
"1 / 4 (↑↓ navigate, Enter select)


Provider 1
❯ Model A
  Model B
Provider 2
  Model C
  Model D
"
`;

exports[`WindowedComboBox - Snapshot Tests > renders multi-line items (area=12, item=3) 1`] = `
"
❯ Item 1                                                                                           ┃
  Item 2                                                                                           │
  Item 3                                                                                           │
  Item 4
  Item 5
  Item 6
 ▼ 6 more"
`;

exports[`WindowedComboBox - Snapshot Tests > renders windowed items with scroll indicators and scrollbar 1`] = `
"
❯ Item 1                                                                                           ┃
  Item 2
  Item 3
  Item 4
  Item 5
  Item 6
  Item 7
 ▼ 15 more"
`;

exports[`WindowedComboBox - Snapshot Tests > renders with search input placeholder 1`] = `
"Search: Search sessions...


❯ Item 1                                                                                           ┃
  Item 2
  Item 3
  Item 4
  Item 5
  Item 6
  Item 7
 ▼ 10 more"
`;
